# DecimaTools

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/Decima/: Decima.hpp
source/Decima/: Decima.cpp
tools/: Archive.cpp  Dump.cpp
